# store-kutra

./: .easignore  .env.example  .gitignore  App.tsx  HERO_SETUP_GUIDE.md  LOCATION_SETUP.md  LOGO_SETUP_GUIDE.md  NOTIFICATIONS_SETUP.md  README.md  app.json  eas.json  package-lock.json  package.json  sample-firebase-data.json
android/: build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/cpp/: CMakeLists.txt  kutra-native.cpp
assets/: icon-specs.txt
src/components/: AuthGuard.tsx  AuthProvider.tsx  ErrorBoundary.tsx  HeroCarousel.tsx  LocationPicker.tsx  MapView.tsx  NotificationPopup.tsx  Rating.tsx  RatingModal.tsx  SplashScreen.tsx  StoreCard.tsx
src/config/: firebase.ts
src/navigation/: AppNavigator.tsx
src/screens/: AddProductScreen.tsx  AddRentalSwapListingScreen.tsx  AddressScreen.tsx  CartScreen.tsx  ChatScreen.tsx  CheckoutScreen.tsx  ConversationScreen.tsx  EditProductScreen.tsx  FavoritesScreen.tsx  FeaturedProductsScreen.tsx  HelpScreen.tsx  HomeScreen.tsx  MyBookingsScreen.tsx  MyItemsScreen.tsx  MyRequestsScreen.tsx  NotificationScreen.tsx  OrderDetailScreen.tsx  OrderManagementScreen.tsx  OrdersScreen.tsx  ProductDetailScreen.tsx  ProductManagementScreen.tsx  ProfileAuthScreen.tsx  ProfileScreen.tsx  RentalScreen.tsx  SearchScreen.tsx  SettingsScreen.tsx  StoreAnalyticsScreen.tsx  StoreDashboardScreen.tsx  StoreDetailScreen.tsx  StoreListScreen.tsx  StoreManagementScreen.tsx  SwapScreen.tsx
src/services/: LocationService.ts  NotificationService.ts
src/store/: index.ts
src/types/: index.ts
(+20 files in other folders)
